syntax = "proto3";
package finschia.or.rollup.v1;

import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

service Msg {
  rpc CreateRollup(MsgCreateRollup) returns (MsgCreateRollupResponse);
  rpc RegisterSequencer(MsgRegisterSequencer) returns (MsgRegisterSequencerResponse);
}

message MsgCreateRollup {
  string rollup_name = 1;
}

message MsgRegisterSequencer {
  string              creator     = 1;
  google.protobuf.Any pubkey      = 2 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
  string              rollup_name = 3;
}

message MsgCreateRollupResponse {}

message MsgRegisterSequencerResponse {}